--- a/Implementierung/Implementierungsprotokoll.tex
+++ b/Implementierung/Implementierungsprotokoll.tex
@@ -798,7 +798,7 @@ Die zum MusicMode gehörende View wurde umbenannt in \textit{MusicModePage}.
 	\item[+]:public StartStopLabel: String - Gibt den korrekten Text für den Button der View zurück. \textit{hinzugefügt}
 	\item[+]:public CurrentStatusLabel: String - Gibt den korrekten Text für das CurrentStatusLabel zurück. \textit{hinzugefügt}
 	\item[+]:protected OnPropertyChanged(string name): void - Benachrichtigt die View, falls es Änderungen gibt. \textit{hinzugefügt}
-	\item[\-]StopMusic: Das Starten und Stoppen der Musik wird von der Property \textit{isRunning} übernommen. \textit{entfernt}
+	\item[$-$]StopMusic: Das Starten und Stoppen der Musik wird von der Property \textit{isRunning} übernommen. \textit{entfernt}
 \end{itemize}
 
 
@@ -940,6 +940,18 @@ Die Dauer haben wir mit der Methode ``Planungspoker'' geschätzt. Die Aufgaben t
 \newline
 \includegraphics[width=\textwidth, height=0.5\textheight]{bilder/Implementierungsplan.png}
 
+\subsection{Statistiken}
+Mit der fortlaufenden Implementierung des Projektes haben sich einige interessante Daten gebildet, die nun präsentiert werden. Die wohl wichtigste Erfassung ist die Anzahl an Codezeilen (Lines of code (LOC)). Die Daten sind am 08.03.20 aufgenommen worden. Da das Projekt noch weiter entwickelt wird, handelt es sich nur um einen Zwischenstand der Daten.
+\begin{itemize}
+	\item \textit{Codezeilen (C\#): }15747
+	\item \textit{Codezeilen (XML): }120
+	\item \textit{Branches (max): }28
+	\item \textit{Commits: }164
+	\item \textit{Pullrequests: }40
+	\item \textit{Tage: }35
+	\item \textit{Gestellte Kriterien: }39
+	\item \textit{Erfüllte Kriterien: }38
+\end{itemize}
 \section{Anhang}
 \subsection{Links}
 \subsubsection{Bibliothek}
